argocd-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: argocd
  namespace: argocd
spec:
  tls:
  - hosts:
      - https-apps.pushingstart.com
    secretName: argocd-secret
  rules:
  - host: https-apps.pushingstart.com
    http:
      paths:
      - path: /argocd/
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
